samples/learningOverview/invalid/R12.dita
<?xml version="1.0" encoding="UTF-8"?>
<learningOverview id="lo1" xml:lang="en">
  <title>Main Learning Overview Title</title>
  <prolog/>
  <learningOverviewbody>
    <lcIntro><title>Intro Title</title><p>Intro text.</p></lcIntro>
    <lcAudience><title>Audience Title</title>Audience text.</lcAudience>
    <lcDuration><title>Duration Title</title><lcTime time="1hr">1 hour</lcTime></lcDuration>
    <lcPrereqs><title>Prereqs 1 Title</title><p>Prereq 1.</p></lcPrereqs>
    <lcPrereqs><title>Prereqs 2 Title</title><p>Prereq 2.</p></lcPrereqs>
    <lcObjectives><title>Objectives Title</title><lcObjectivesGroup><lcObjective>Objective 1</lcObjective></lcObjectivesGroup></lcObjectives>
  </learningOverviewbody>
</learningOverview>